[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmbd"
version = "0.1.0"
description = "Dynamic Markov Blanket Detection Framework"
readme = "README.md"
authors = [
    {name = "OpenManus Team", email = "info@openmanus.org"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
    "networkx>=2.6.0",
    "seaborn>=0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/openmanus/dmbd"
"Bug Tracker" = "https://github.com/openmanus/dmbd/issues" 